; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_preview.c_preview_set_render_size.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_preview.c_preview_set_render_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.TYPE_6__*, i32 }
%struct.TYPE_6__ = type { i32, i32 }
%struct.TYPE_8__ = type { double, double, i32, i32 }

@.str = private unnamed_addr constant [14 x i8] c"preview_image\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"preview_window\00", align 1
@GDK_HINT_ASPECT = common dso_local global i32 0, align 4
@GDK_HINT_RESIZE_INC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @preview_set_render_size(%struct.TYPE_7__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.TYPE_8__, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = call i32* @GHB_WIDGET(i32 %13, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  store i32* %14, i32** %7, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @gtk_widget_set_size_request(i32* %15, i32 %16, i32 %17)
  %19 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 8
  %22 = call i32* @GHB_WIDGET(i32 %21, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  %23 = call i32* @GTK_WINDOW(i32* %22)
  store i32* %23, i32** %8, align 8
  %24 = load i32*, i32** %8, align 8
  %25 = call i32 @GTK_WIDGET(i32* %24)
  %26 = call i32* @ghb_widget_get_surface(i32 %25)
  store i32* %26, i32** %9, align 8
  %27 = load i32*, i32** %8, align 8
  %28 = call i32 @gtk_window_unmaximize(i32* %27)
  %29 = load i32*, i32** %9, align 8
  %30 = icmp ne i32* %29, null
  br i1 %30, label %31, label %53

31:                                               ; preds = %3
  %32 = load i32, i32* %5, align 4
  %33 = sub nsw i32 %32, 4
  %34 = sitofp i32 %33 to double
  %35 = load i32, i32* %6, align 4
  %36 = sitofp i32 %35 to double
  %37 = fdiv double %34, %36
  %38 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %10, i32 0, i32 0
  store double %37, double* %38, align 8
  %39 = load i32, i32* %5, align 4
  %40 = add nsw i32 %39, 4
  %41 = sitofp i32 %40 to double
  %42 = load i32, i32* %6, align 4
  %43 = sitofp i32 %42 to double
  %44 = fdiv double %41, %43
  %45 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %10, i32 0, i32 1
  store double %44, double* %45, align 8
  %46 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %10, i32 0, i32 3
  store i32 2, i32* %46, align 4
  %47 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %10, i32 0, i32 2
  store i32 2, i32* %47, align 8
  %48 = load i32*, i32** %9, align 8
  %49 = load i32, i32* @GDK_HINT_ASPECT, align 4
  %50 = load i32, i32* @GDK_HINT_RESIZE_INC, align 4
  %51 = or i32 %49, %50
  %52 = call i32 @ghb_surface_set_geometry_hints(i32* %48, %struct.TYPE_8__* %10, i32 %51)
  br label %53

53:                                               ; preds = %31, %3
  %54 = load i32*, i32** %8, align 8
  %55 = load i32, i32* %5, align 4
  %56 = load i32, i32* %6, align 4
  %57 = call i32 @gtk_window_resize(i32* %54, i32 %55, i32 %56)
  %58 = load i32, i32* %5, align 4
  %59 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %60 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %59, i32 0, i32 0
  %61 = load %struct.TYPE_6__*, %struct.TYPE_6__** %60, align 8
  %62 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %61, i32 0, i32 0
  store i32 %58, i32* %62, align 4
  %63 = load i32, i32* %6, align 4
  %64 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %65 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %64, i32 0, i32 0
  %66 = load %struct.TYPE_6__*, %struct.TYPE_6__** %65, align 8
  %67 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %66, i32 0, i32 1
  store i32 %63, i32* %67, align 4
  ret void
}

declare dso_local i32* @GHB_WIDGET(i32, i8*) #1

declare dso_local i32 @gtk_widget_set_size_request(i32*, i32, i32) #1

declare dso_local i32* @GTK_WINDOW(i32*) #1

declare dso_local i32* @ghb_widget_get_surface(i32) #1

declare dso_local i32 @GTK_WIDGET(i32*) #1

declare dso_local i32 @gtk_window_unmaximize(i32*) #1

declare dso_local i32 @ghb_surface_set_geometry_hints(i32*, %struct.TYPE_8__*, i32) #1

declare dso_local i32 @gtk_window_resize(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
